Added new config and migrated to mail listener instead of gmail which has an awesome 'DOES NOT WORK' disclaimer in the README

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "should": "^4.0.0"
   },
   "dependencies": {
-    "gmail": "^0.5.0",
     "express": "^4.4.0",
     "body-parser": "^1.2.2",
-    "serve-favicon": "^2.0.0"
+    "serve-favicon": "^2.0.0",
+    "mail-listener2": "^0.1.3"
   }
 }
