--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "express": "^4.4.0",
     "body-parser": "^1.2.2",
     "serve-favicon": "^2.0.0",
-    "mail-listener2": "^0.1.3"
+    "mail-listener2": "^0.1.3",
+    "xoauth2": "^0.1.8",
+    "oauth": "^0.9.12"
   }
 }
