--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "^1.2.2",
     "serve-favicon": "^2.0.0",
     "mail-listener2": "^0.1.3",
-    "oauth": "^0.9.12"
+    "oauth": "^0.9.12",
+    "gmail-imap": "0.0.2"
   }
 }
